@@ -513,19 +513,6 @@ abstract class Skin extends ContextSource {
 	}
 
 	/**
-	 * Whether the logo should be preloaded with an HTTP link header or not
-	 *
-	 * @deprecated since 1.32 Redundant. It now happens automatically based on whether
-	 *  the skin loads a stylesheet based on ResourceLoaderSkinModule, which all
-	 *  skins that use wgLogos in CSS do, and other's would not.
-	 * @since 1.29
-	 * @return bool
-	 */
-	public function shouldPreloadLogo() {
-		return false;
-	}
-
-	/**
 	 * @return string HTML
 	 */
 	public function getCategoryLinks() {
