@@ -576,6 +576,7 @@ because of Phabricator reports.
 * Skin::getSkinNameMessages() deprecated in 1.34, has been removed.
 * Skin::escapeSearchLink() deprecated in 1.34, has been removed, use
   Skin::getSearchLink() instead.
+* Skin::shouldPreloadLogo() deprecated in  1.32, has been removed.
 * Revision::loadFromId and RevisionStore::loadRevisionFromId have been
   removed.
 * OutputPage::parserOptions doesn't accept an $options parameter anymore.
